# agentic-dev-kit

./: CLAUDE.md  LICENSE  README.md  additional_ressources.md  pyproject.toml
adk/: __main__.py  cli.py  errors.py  github.py  models.py  resolve.py
adk/commands/: add.py  remove.py  update.py
components/agents/: code_reviewer.md
components/commands/: learn.md
components/skills/polars/: SKILL.md
components/skills/polars/references/: polars-api-patterns.md
components/tools/file_search/: file_search.py  metadata.yaml
docs/: getting-started.md
